--- a/views/widget/nav_tenth/new_tenth.html
+++ b/views/widget/nav_tenth/new_tenth.html
@@ -35,7 +35,7 @@
     {%
       set aboutUs=[
       {
-      "pageroute": "events",
+      "pageroute": "about/events",
       "navtext": "金吉列大事记"
       },
       {
