--- a/views/widget/corporate_events/new_corporate_events.html
+++ b/views/widget/corporate_events/new_corporate_events.html
@@ -111,6 +111,7 @@
     height: 380px;
     float: left;
     margin-top: 32px;
+    border-radius: 5px;
   }
   .shiji-pic img{
     width: 810px;
@@ -120,6 +121,7 @@
   .shiji-pic3{
     margin-top: 32px;
     display: inline-block;
+    border-radius: 5px;
   }
   .shiji-pic3 img{
     width: 256px;
@@ -162,7 +164,9 @@
 {% for yearnum, yearamount in memorabilia_list %}
 <div class="curyear" style="background:#fafafa;width: 1180px;height: auto;margin: 0 auto;">
   <div class="year-box clearfix" id="{{yearnum | shorten(-1)}}"><i class="down xiangxia" style="cursor: pointer;">{{ yearnum | shorten(-1)}}</i></div>
+  {% if loop.index!=loop.length %}
   <div class="kong" style="display: block"></div>
+  {% endif %}
   {% for monthnum, monthamount in yearamount %}
 
   <div class="month-box clearfix">
@@ -255,11 +259,13 @@
  <div class="kong"></div>
   {% endfor %}
   </div>
-  
+  {% if loop.index==loop.length %}
+  <div id="zuihou" data-year="{{yearnum | shorten(-1)}}"></div>
+  {% endif %}
   {% endfor %}
 </div>
 
-  <div class="curyear1" id="eve_more" data-year="{{yearnum | shorten(-1)}}" style="background:#fafafa;width: 1180px;height: auto;margin: 0 auto;">
+  <div class="curyear1" id="eve_more" style="background:#fafafa;width: 1180px;height: auto;margin: 0 auto;">
   <div class="year-box clearfix" ><div class="kong2"></div></div>
   <div class="year-box clearfix" ><i class="eve_more xiangxia" style="cursor: pointer;"></i></div>
   <div class="year-box clearfix" ><i class="eve_more1 xiangxia" style="cursor: pointer;"></i></div>
@@ -312,11 +318,12 @@
         },
         dataType:'json',
         success:function(msg){
-          console.log('msg', msg)
-          evemore(msg)
+          console.log('msg', msg);
+          evemore(msg);
+          evemore_slide(msg);
         },
         error:function(XMLHttpRequest, textStatus, errorThrown){
-            console.log("获取失败，请重试！CODE:"+XMLHttpRequest.status)
+          console.log("获取失败，请重试！CODE:"+XMLHttpRequest.status);
         }
       });
     })
@@ -325,61 +332,85 @@
     })
     console.log('year',$('#eve_more').attr('data-year'))
     if ($('#eve_more').attr('data-year') == '2001') {
-      console.log('aaaaaaa')
+      console.log('aaaaaaa');
       $('#eve_more').css("display","none");
     }
 
   });
 
-  function evemore (msg) {
-    var html = ''
+  function evemore_slide (msg) {
+    var html = '<li style="padding: 0px;margin-top: -3px;width: 75px;height: 0px;margin-left: 8px;margin-bottom: 6px;"><div class="kong" style="height: 12px;"></div></li>';
+    var s = 0;
+    var a = Object.keys(msg);
     for (var key in msg) {
+      s++;
+      html += '<li>';
+      html += '<a href="javascript:void(0);" onclick="showyear('+key.substring(0,4)+')"><div class="eve-box clearfix"><i class="down xiangxia" style="cursor: pointer;"></i><h6 class="year-num" style="cursor: pointer;">'+key.substring(0,4)+'</h6></div></a>';
+      console.log('s',s);
+      console.log('msg',msg.length);
+      if (s != a.length) {
+        html += '<div class="kong"></div>';
+      }
+      html += '</li>';
+    }
+    $('#eve_slide').append($(html));
+  }
+
+  function evemore (msg) {
+    var html = '';
+    var s = 0;
+    var a = Object.keys(msg);
+    for (var key in msg) {
+      ++s;
       html += '<div class="curyear" style="background:#fafafa;width: 1180px;height: auto;margin: 0 auto;">'
-      html += '<div class="year-box clearfix" id="'+key+'"><i class="down xiangxia" style="cursor: pointer;">'+key+'</i></div>'
+      if (s == 1) {
+        html += '<div class="kong" style="display: block"></div>'
+      }
+      html += '<div class="year-box clearfix" id="'+key.substring(0,4)+'"><i class="down xiangxia" style="cursor: pointer;">'+key.substring(0,4)+'</i></div>'
       html += '<div class="kong" style="display: block"></div>'
       for (var key1 in msg[key]) {
         html += '<div class="month-box clearfix">'
         html += '<div class="month-left">'
-        if (key1 == 1)
+        if (key1.substring(0,1) == 1 && key1.length == 1)
         html += '<p class="month-num"></p>'
-        else if (key1 == 2)
+        else if (key1.substring(0,1) == 2)
         html += '<p class="month-num yue2"></p>'
-        else if (key1 == 3)
+        else if (key1.substring(0,1) == 3)
         html += '<p class="month-num yue3"></p>'
-        else if (key1 == 4)
+        else if (key1.substring(0,1) == 4)
         html += '<p class="month-num yue4"></p>'
-        else if (key1 == 5)
+        else if (key1.substring(0,1) == 5)
         html += '<p class="month-num yue5"></p>'
-        else if (key1 == 6)
+        else if (key1.substring(0,1) == 6)
         html += '<p class="month-num yue6"></p>'
-        else if (key1 == 7)
+        else if (key1.substring(0,1) == 7)
         html += '<p class="month-num yue7"></p>'
-        else if (key1 == 8)
+        else if (key1.substring(0,1) == 8)
         html += '<p class="month-num yue8"></p>'
-        else if (key1 == 9)
+        else if (key1.substring(0,1) == 9)
         html += '<p class="month-num yue9"></p>'
-        else if (key1 == 10)
+        else if (key1.substring(0,2) == 10)
         html += '<p class="month-num yue10"></p>'
-        else if (key1 == 11)
+        else if (key1.substring(0,2) == 11)
         html += '<p class="month-num yue11"></p>'
-        else if (key1 == 12)
+        else if (key1.substring(0,2) == 12)
         html += '<p class="month-num yue12"></p>'
         html += '</div>'
         html += '<div class="month-right">'
-        for (var key11 in msg[key][key1]) {
+        for (var key11 = 0; key11 < msg[key][key1].length; key11++) {
           html += '<p style="display: none;">'+msg[key][key1][key11].title+'<i class="city-icon iconfont con-btn con-up" style="font-size: 14px;">&#xe636;</i></p>'
           if (msg[key][key1][key11].thumb3 == '' || msg[key][key1][key11].thumb3 == null) {
             if (msg[key][key1][key11].thumb == '' || msg[key][key1][key11].thumb == null) {
               //{# 无图 #}
               html += '<div class="dashiji-con" style="display: block;margin: 20px 0px 60px 36px;">'
               html += '<i class="dian"></i>'
-              html += '<i class="kuang_jiao"></i>'+ key11+'. '+ msg[key][key1][key11].description +'</div>'
+              html += '<i class="kuang_jiao"></i>'+ (key11+1) +'. '+ msg[key][key1][key11].description +'</div>'
             } else {
               //{# 只一条 #}
               html += '<div class="dashiji-con1 clearfix" style="display: block;margin: 20px 0px 60px 36px;">'
               html += '<i class="dian1"></i>'
-              html += '<i class="kuang_jiao1"></i>'+ key11+'. '+ msg[key][key1][key11].description +'<div class="shiji-pic clearfix">'
-              html += '<img src="'+fn.imageThumb(msg[key][key1][key11].thumb,'280x210')+'" alt="">'
+              html += '<i class="kuang_jiao1"></i>'+ (key11+1) +'. '+ msg[key][key1][key11].description +'<div class="shiji-pic clearfix">'
+              html += '<img src="'+fn.imageThumb(msg[key][key1][key11].thumb)+'" alt="">'
               html += '</div>'
               html += '</div>'
             }
@@ -387,7 +418,7 @@
             if (key11 == msg[key][key1].length) {
               html += '<div class="dashiji-con" style="display: block;margin: 20px 0px 60px 36px;">'
               html += '<i class="dian"></i>'
-              html += '<i class="kuang_jiao"></i>'+ key11+'. '+ msg[key][key1][key11].description
+              html += '<i class="kuang_jiao"></i>'+ (key11+1) +'. '+ msg[key][key1][key11].description
               html += '<div class="shiji-pic3 clearfix">'
               html += '<img src="'+fn.imageThumb(msg[key][key1][key11].thumb,'280x210')+'" alt="">'
               html += '<img src="'+fn.imageThumb(msg[key][key1][key11].thumb2,'280x210')+'" alt="">'
@@ -397,7 +428,7 @@
             } else {
               html += '<div class="dashiji-con" style="display: block;margin: 20px 0px 0px 36px;">'
               html += '<i class="dian"></i>'
-              html += '<i class="kuang_jiao"></i>'+ key11+'. '+ msg[key][key1][key11].description
+              html += '<i class="kuang_jiao"></i>'+ (key11+1) +'. '+ msg[key][key1][key11].description
               html += '<div class="shiji-pic3 clearfix">'
               html += '<img src="'+fn.imageThumb(msg[key][key1][key11].thumb,'280x210')+'" alt="">'
               html += '<img src="'+fn.imageThumb(msg[key][key1][key11].thumb2,'280x210')+'" alt="">'
@@ -412,11 +443,8 @@
         html += '<div class="kong"></div>'
       }
       html += '</div>'
-      if (key == msg.length) {
-        html += '<div class="curyear1" id="eve_more" data-year="'+key+'" style="background:#fafafa;width: 1180px;height: auto;margin: 0 auto;">'
-        html += '<div class="year-box clearfix" ><i class="eve_more xiangxia" style="cursor: pointer;"></i></div>'
-        //html += '<div class="year-box clearfix" ><i class="eve_more1 xiangxia" style="cursor: pointer;"></i></div>'
-        html += '</div>'
+      if (s == a.length) {
+        $('#zuihou').attr('data-year', a[s-1].substring(0, 4))
       }
     }
     $('#evemain').append($(html));
@@ -438,6 +466,11 @@
       $(".curyear:last").find(".kong").eq(0).css("display","none");
       $(".curyear:last").find(".kong:last").css("display","none");
     })
+    console.log('yeareve', $('#zuihou').attr('data-year'))
+    if ($('#zuihou').attr('data-year') == 1999) {
+      console.log('aaaaaaa');
+      $('#eve_more').css("display","none");
+    }
   }
   
 </script>
