--- a/views/release_article_yimin.html
+++ b/views/release_article_yimin.html
@@ -327,8 +327,8 @@
   <script src="{{helper.cdnhost}}/assets/js/online_evaluation.js" ></script>
   <script src="{{helper.cdnhost}}/assets/js/slide_yimin.js"></script>
   <script src="{{helper.cdnhost}}/assets/js/nav_common.js"></script>
-  <!-- <script  src="{{helper.cdnhost}}/assets/js/wangEditor.js"></script> -->
-  <script src="//unpkg.com/wangeditor/release/wangEditor.min.js"></script>
+  <script  src="{{helper.cdnhost}}/assets/js/wangEditor.js"></script>
+  <!-- <script src="//unpkg.com/wangeditor/release/wangEditor.min.js"></script> -->
   <script src="{{helper.cdnhost}}/assets/js/follow.js"></script>
   <script src="{{helper.cdnhost}}/assets/js/footer.js"></script>
   <script src="{{helper.cdnhost}}/assets/js/xSlider-4.15.js" ></script>
