--- a/views/widget/new_slide/events_slide.html
+++ b/views/widget/new_slide/events_slide.html
@@ -79,6 +79,7 @@
     $('#' + year).parents(".curyear").children(".kong").css("display","block");
     $('#' + year) .parents(".curyear").siblings().children(".month-box").css("display","none");
     $('#' + year).parents(".curyear").siblings().children(".kong").css("display","none");
+    $('#' + year).parents(".curyear").siblings("#tian").css("display","none");
     $.each($('#' + year).parents(".curyear").siblings(".curyear"),function(){
       // console.log('sssss', year)
       $(this).find(".kong").eq(0).css("display","block");
