--- a/views/release_article.html
+++ b/views/release_article.html
@@ -254,7 +254,7 @@
   <script src="{{helper.cdnhost}}/assets/js/online_evaluation.js" ></script>
   <script src="{{helper.cdnhost}}/assets/js/slide.js"></script>
   <script src="{{helper.cdnhost}}/assets/js/nav_common.js"></script>
-  <script  src="{{helper.cdnhost}}/assets/js/wangEditor.js"></script>
+  <script  src="{{helper.cdnhost}}/assets/js/wangEditor.min.js"></script>
   <!-- <script src="//unpkg.com/wangeditor/release/wangEditor.min.js"></script> -->
   <script src="{{helper.cdnhost}}/assets/js/follow.js"></script>
   <script src="{{helper.cdnhost}}/assets/js/footer.js"></script>
