--- a/views/widget2/active_popup/active_popup.html
+++ b/views/widget2/active_popup/active_popup.html
@@ -1,8 +1,7 @@
-
-<div class="act-pop-left" >
+<!-- <div class="act-pop-left" >
     <img src="{{helper.cdnhost}}/assets/img/popup_left_b.png" />
-</div>
-<div class="act-pop-box" >
+</div> -->
+<div class="act-pop-box">
   <div class="act-pop-box-con">
     <div class="act-pop-info-box clearfix">
         {# 清除表单自动添加 #}
@@ -13,13 +12,6 @@
         {# end清除表单自动添加 #}
         <input class="act-pop-input" placeholder="请输入姓名" id="act-name" maxlength="10" autocomplete="off">
         <input class="act-pop-input" placeholder="请输入手机号" id="act-phone" autocomplete="off">
-        <div class="act-code-box">
-            <input class="act-code-input" id="act-code" placeholder="请输入验证码" style="width: 47.1%" autocomplete="off">
-            <span style="color:#dcdcdc;">|</span>
-            <div class="act-code-btn" >
-                点击发送验证码
-            </div>
-        </div>
          <div class="act-pop-sel" >
             <span class="act-pop-sel-val" data-id="" >意向国家</span>
             <i class="iconfont" style="position:absolute;right:20px;" id="icon_arrow">&#xe60b;</i>
@@ -133,14 +125,13 @@
                 <div class="act-pop-triangle-white"></div>
             </div>
         </div>
+          <div class="act-code-btn">预约报名</div>
     </div>
-    <div class="act-pop-gift" >
-        获取优惠券
-    </div>
-    <a href="http://www.jjl.cn/zt/2018/20180528_xiazhan/beijing.shtml" class="act-pop-detail" >
+    <!-- <div class="act-pop-gift" >获取优惠券</div> -->
+    <!-- <a href="http://www.jjl.cn/zt/2018/20180528_xiazhan/beijing.shtml" class="act-pop-detail" >
         <img src="{{helper.cdnhost}}/assets/img/popup_detail_b.png" />
-    </a>
-    <div class="act-pop-x-btn" ></div>
+    </a> -->
+    <!-- <div class="act-pop-x-btn" ></div> -->
     {#<span class="act-pop-time">
         活动时间：2018年6月23日至2018年8月25日
     </span>#}
@@ -149,26 +140,43 @@
 
 <script>
     $(function(){
-        if(cookie('act_flag')=='on' || cookie('act_flag')==null||cookie('act_flag')==undefined){
-          $('.act-pop-box').show().animate({'left':'0'});
-          $('.act-pop-left').animate({'left':'-100%'});
-        }else{
-          $('.act-pop-box').hide().animate({'left':'-100%'});
-          $('.act-pop-left').animate({'left':'0'});  
-        }
-        $(".act-pop-country li:nth-child(8n)").css({'marginRight':'0'});
-        $('.act-pop-x-btn').on('click',function(){
-            $('.act-pop-box').hide().animate({'left':'-100%'});
-            $('.act-pop-left').animate({'left':'0'});
-            cookie('act_flag','off',{expires: 1,path:'/'});
+        //
+        $(window).scroll(function(){
+          var $scrolltop = $(window).scrollTop();
+          var $height = $(document).height();
+          var $wheight = $(window).height();
+
+          if($scrolltop >= 500 ) {
+            $('.act-pop-box').addClass('active-fade')
+          } else {
+            $('.act-pop-box').removeClass('active-fade')
+          }
+          if( $scrolltop == $height - $wheight) {
+            $('.act-pop-box').removeClass('active-fade')
+          }
         });
-        $('.act-pop-left').on('click',function(){
-            $(this).animate({'left':'-100%'});
-            $('.act-pop-box').show().animate({'left':'0'});
-            cookie('act_flag','on',{expires: 1,path:'/'});
-        });
+
+        // if(cookie('act_flag')=='on' || cookie('act_flag')==null||cookie('act_flag')==undefined){
+        //   $('.act-pop-box').show().animate({'left':'0'});
+        //   $('.act-pop-left').animate({'left':'-100%'});
+        // }else{
+        //   $('.act-pop-box').hide().animate({'left':'-100%'});
+        //   $('.act-pop-left').animate({'left':'0'});  
+        // }
+        // $(".act-pop-country li:nth-child(8n)").css({'marginRight':'0'});
+        // $('.act-pop-x-btn').on('click',function(){
+        //     $('.act-pop-box').hide().animate({'left':'-100%'});
+        //     $('.act-pop-left').animate({'left':'0'});
+        //     cookie('act_flag','off',{expires: 1,path:'/'});
+        // });
+        // $('.act-pop-left').on('click',function(){ //点击关闭
+        //     $(this).animate({'left':'-100%'});
+        //     $('.act-pop-box').show().animate({'left':'0'});
+        //     cookie('act_flag','on',{expires: 1,path:'/'});
+        // });
+
+        //选择国家
         $('.act-pop-sel').on('click',function(){
-            //选择国家
             if($('.act-pop-sel-country').css('display')=='block'){
                 $('.act-pop-sel-country').hide();
                 document.getElementById('icon_arrow').style.transform="rotate(0deg)";
@@ -181,6 +189,7 @@
                 document.getElementById('icon_arrow').style.msTransform="rotate(180deg)";
             }
         });
+
         $('.act-pop-country li').on('click',function(e){
             e.stopPropagation();
             $('.act-pop-sel-country').hide();
@@ -194,9 +203,10 @@
         })
         $('.act-code-btn').on('click',getCode);//点击获取验证码
         $('.act-pop-gift').on('click',getGift);// 点击领取优惠码
+
+        // 60s倒计时
         var timer;
         function countDown() {
-            // 60s倒计时
             var countDownTime = 60;
             timer = window.setInterval(function () {
                 countDownTime--;
@@ -215,7 +225,7 @@
             }
             $(".act-code-btn").unbind("click");
             $.ajax({
-                url:'/sendcode_s_coupon',
+                url:'/assessment',
                 type:'post',
                 data:{
                     phone:$.trim($('#act-phone').val())
@@ -278,7 +288,7 @@
             }
             $(this).unbind('click');
             $.ajax({
-                url: '/getCoupons',
+                url: '/cmsapi/assessment',
                 type: 'get',
                 data: {
                     user_name: actName,
