--- a/views/widget2/active_popup/active_popup.css
+++ b/views/widget2/active_popup/active_popup.css
@@ -64,7 +64,7 @@
         border-bottom-left-radius: 4px;
     }
     .act-code-btn{
-        color:#77162b;
+        color:#932003;
         text-align: center;
         line-height: 35px;
         font-size:14px;
@@ -74,7 +74,13 @@
         float: left;
         -webkit-border-radius:4px;
         border-radius: 4px;
-        background: yellow;
+        background: #f9ef1c;
+        -webkit-transition: .3s linear;
+        transition: .3s linear;
+    }
+    .act-code-btn:hover{
+      color: #fff;
+      background: #eda906;
     }
     .act-pop-sel{
         height:35px;
