--- a/views/widget2/active_popup/active_popup.css
+++ b/views/widget2/active_popup/active_popup.css
@@ -1,16 +1,14 @@
     .act-pop-box{
-        width:100%;
-        height:130px;
-        position:fixed;
-        /* left:0; */
-        bottom:0;
-        z-index:11002;
-        background:url(../../assets/img/add-footer.png);
-        background-size: 100% 100%;
-        /* background-position-x: -105px; */
-        min-width:1200px;
-        opacity: 0;
-
+      width: 100%;
+      height: 130px;
+      position: fixed;
+      bottom: 0;
+      z-index: 11002;
+      background: url(../../assets/img/add-footer.png);
+      background-position: center center;
+      /* background-size: 100% 100%; */
+      min-width: 1200px;
+      opacity: 0;
     }
     /* .act-pop-box-con{
         width: 1200px;
@@ -23,9 +21,9 @@
         top: -28px;
     } */
     .act-pop-info-box{
-      margin-top: 85px;
-      width: 46.1%;
-      margin-left: 42%;
+      margin-top: 82px;
+      width: 45%;
+      margin-left: 50%;
       float: left;
     }
     .act-pop-input{
