添加底部浮窗

--- a/views/widget2/active_popup/active_popup.html
+++ b/views/widget2/active_popup/active_popup.html
@@ -111,6 +111,14 @@
                 {
                     name:"瑞士",
                     id:"113"
+                },
+                {
+                  name:"中国澳门",
+                  id:"55"
+                },
+                {
+                  name:"奥地利",
+                  id:"115"
                 }
             ] %}
             <div class="act-pop-sel-country" >
