--- a/views/widget2/active_popup/active_popup.css
+++ b/views/widget2/active_popup/active_popup.css
@@ -67,7 +67,7 @@
         font-size:14px;
         cursor: pointer;
         margin-left:15px;
-        width: 150px;
+        width: 20%;
         float: left;
         -webkit-border-radius:4px;
         border-radius: 4px;
