--- a/views/widget2/active_popup/active_popup.css
+++ b/views/widget2/active_popup/active_popup.css
@@ -7,7 +7,8 @@
       background: url(../../assets/img/add-footer.png);
       background-position: center center;
       min-width: 1200px;
-      opacity: 0;
+      /* opacity: 0; */
+      display: none;
     }
     /* .act-pop-box-con{
         width: 1200px;
