修改底部悬浮样式和滚轴高度

--- a/views/widget2/active_popup/active_popup.css
+++ b/views/widget2/active_popup/active_popup.css
@@ -123,7 +123,7 @@
     .act-pop-x-btn{
         width:30px;
         height:30px;
-        background:url(../../assets/img/popup_x_b.png) no-repeat 0 0;
+        background:url(../../assets/img/popup_x_b1.png) no-repeat 0 0;
         background-size: 30px 30px;
         position:absolute;
         right: 10px;
