--- a/views/about/cooperation.html
+++ b/views/about/cooperation.html
@@ -190,6 +190,8 @@
 {% include "widget/new_footer/common_footer.html" %}
 {% import "widget/new_slide/new_slide.html" as  slide %}
 {{slide.leyu_slide("XC_COOPERATION_SEAT10",helper) }}
+<!-- 底部悬浮 -->
+{% include "widget2/active_popup/active_popup.html" %}
 <script src="{{helper.cdnhost}}/assets/js/xSlider-4.15.js" ></script>
 <script src="{{helper.cdnhost}}/assets/js/show_advert.js"></script>
 <!--<script src="{{helper.cdnhost}}/assets/js/common.js" ></script>-->
