--- a/views/case_detail.html
+++ b/views/case_detail.html
@@ -172,7 +172,8 @@
   {{slide.leyu_slide(userinfo,login_info,helper) }}
   {% endif %}
   {% include "widget/new_footer/common_footer.html" %}
-  <!-- =====活动弹窗===== -->
+  <!-- 底部悬浮 -->
+{% include "widget2/active_popup/active_popup.html" %}
   <div>
     <input type="hidden" id="detail_id" value="{{article_id}}"/>
   </div>
