修改底部悬浮页面

--- a/views/about/activity.html
+++ b/views/about/activity.html
@@ -219,6 +219,8 @@
 {% include "widget/new_footer/new_footer.html" %}
 {% import "widget/new_slide/new_slide.html" as  slide %}
 {{slide.leyu_slide("XC_ACTIVITY_SEAT10",helper) }}
+<!-- 底部悬浮 -->
+{% include "widget2/active_popup/active_popup.html" %}
 </body>
 <!--<script src="{{helper.cdnhost}}/assets/js/common.js"></script>-->
 <script src="{{helper.cdnhost}}/assets/js/xSlider-4.15.js" ></script>
