--- a/views/about/canzan.html
+++ b/views/about/canzan.html
@@ -58,6 +58,8 @@
 {% include "widget/new_footer/new_footer.html" %}
 {% import "widget/new_slide/new_slide.html" as  slide %}
 {{slide.leyu_slide("XC_COUNSELLER_SEAT10",helper) }}
+<!-- 底部悬浮 -->
+{% include "widget2/active_popup/active_popup.html" %}
 </body>
 <script>
   var AD_PAGE_NAME = "COUNSELLER"; //设置页面对应的名字
