--- a/views/about/cultures.html
+++ b/views/about/cultures.html
@@ -81,6 +81,8 @@
   <p>大学长（北京）网络教育科技有限公司（简称大学长公司）是金吉列留学控股子公司，依托先进的互联网技术建立大学长网络智慧分享平台。通过金吉列留学在的行业的资源优势，应用先进的人工智能技术进行大数据汇集和用户画像分析，为用户提供“可信赖，全方位，高水准”的知识和智慧，以及“公平，透明，诚信，专业”的服务，使所有用户在大学长网络平台上享受到全方位、多品类的智能化智慧分享服务。</p>
   </div>
 </div>
+<!-- 底部悬浮 -->
+{% include "widget2/active_popup/active_popup.html" %}
 {% include "widget/new_footer/common_footer.html" %}
 </body>
 <script src="{{helper.cdnhost}}/assets/js/nav_common.js"></script>
