修改底部悬浮框

--- a/views/agreement.html
+++ b/views/agreement.html
@@ -183,6 +183,8 @@
     <p>【可转让】“金吉列”根据业务调整等情况，有权将本协议项下的权利和义务部分或全部转让给其他方，但须提前 5 日通知您。</p>
   </div>
 </div>
+<!-- 底部悬浮 -->
+{% include "widget2/active_popup/active_popup.html" %}
 {% include "widget/new_footer/common_footer.html" %}
 </body>
 <script src="{{helper.cdnhost}}/assets/js/nav_common.js"></script>
