修改底部悬浮

--- a/views/widget2/active_popup/active_popup.html
+++ b/views/widget2/active_popup/active_popup.html
@@ -161,7 +161,7 @@
           var sUserAgent = navigator.userAgent.toLowerCase();
           if(sUserAgent.match(/ipad/i) == "ipad"){
             if( $scrolltop >= ($height - $wheight) - 500 ) {
-                alert('ipad')
+                // alert('ipad')
                 $('.act-pop-box').css('display', 'none')
             }    
           } else {
