修改底部悬浮兼容ipad

--- a/views/widget2/active_popup/active_popup.html
+++ b/views/widget2/active_popup/active_popup.html
@@ -160,10 +160,10 @@
           }
           var sUserAgent = navigator.userAgent.toLowerCase();
           if(sUserAgent.match(/ipad/i) == "ipad"){
-            if( $scrolltop >= ($height - $wheight) - 500 ) {
-                // alert('ipad')
-                $('.act-pop-box').css('display', 'none')
-            }    
+            // if( $scrolltop >= ($height - $wheight) - 500 ) {
+            //     // alert('ipad')
+            //     $('.act-pop-box').css('display', 'none')
+            // }    
           } else {
             if( $scrolltop >= ($height - $wheight) - 200 ) {
                 $('.act-pop-box').css('display', 'none')
