--- a/views/widget2/active_popup/active_popup.html
+++ b/views/widget2/active_popup/active_popup.html
@@ -148,29 +148,34 @@
 <script>
     $(function(){
         //
+        var f = true
         $(window).scroll(function(){
-          var $scrolltop = $(window).scrollTop();
-          var $height = $(document).height();
-          var $wheight = $(window).height();
-          if($scrolltop >= 250 ) {
-            $('.act-pop-box').css('display', 'block')
-          } else {
-            $('.act-pop-box').css('display', 'none')
-          }
-          var sUserAgent = navigator.userAgent.toLowerCase();
-          if(sUserAgent.match(/ipad/i) == "ipad"){
-            // if( $scrolltop >= ($height - $wheight) - 500 ) {
-            //     // alert('ipad')
-            //     $('.act-pop-box').css('display', 'none')
-            // }    
-          } else {
-            if( $scrolltop >= ($height - $wheight) - 200 ) {
+          if (f) {
+            var $scrolltop = $(window).scrollTop();
+            var $height = $(document).height();
+            var $wheight = $(window).height();
+            if($scrolltop >= 250 ) {
+                $('.act-pop-box').css('display', 'block')
+            } else {
                 $('.act-pop-box').css('display', 'none')
             }
+            var sUserAgent = navigator.userAgent.toLowerCase();
+            if(sUserAgent.match(/ipad/i) == "ipad"){
+                // if( $scrolltop >= ($height - $wheight) - 500 ) {
+                //     // alert('ipad')
+                //     $('.act-pop-box').css('display', 'none')
+                // }    
+            } else {
+                if( $scrolltop >= ($height - $wheight) - 200 ) {
+                    $('.act-pop-box').css('display', 'none')
+                }
+            }
           }
+          
         });
 
         $('.act-pop-x-btn').on('click', function () {
+            f = false
             $('.act-pop-box').css('display', 'none')
         })
 
